<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.AboutActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.hjq.widget.view.ScaleImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_20"
        app:scaleRatio="1.5"
        app:srcCompat="@drawable/study" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_name"
            android:textColor="#222222"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/dp_20"
            android:text="@string/about_word"
            android:textColor="#222222"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black80"
                android:layout_marginTop="@dimen/dp_15"
                android:textSize="@dimen/about_title_size"
                android:paddingLeft="14dp" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/ab_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_rightText="@string/about_copy"
                app:bar_leftText="@string/common_qq_email"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />


            <TextView
                android:id="@+id/phone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black80"
                android:layout_marginTop="@dimen/dp_15"
                android:textSize="@dimen/about_title_size"
                android:paddingLeft="14dp"
                android:text="@string/about_phone"/>

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/ab_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_rightText="@string/about_dial"
                app:bar_leftText="@string/common_phone"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />
        </LinearLayout>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_20"
        android:text="@string/about_copyright"
        android:textColor="#BDBDBD"
        android:textSize="@dimen/sp_14" />

</LinearLayout>