<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.PrivacyAgreementActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/privacy_title" />



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:lineSpacingExtra="8dp"
            android:lineSpacingMultiplier="1.2"
            android:autoLink="web|email" />


    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_20"
        android:text="@string/about_copyright"
        android:textColor="#BDBDBD"
        android:textSize="@dimen/sp_14" />

</LinearLayout>