<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragment.MyFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_my_info_bg"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/menu"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="19dp">
                <LinearLayout
                    android:id="@+id/personal_data"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                     >


                    <ImageView
                        android:id="@+id/header"
                        android:layout_width="60dp"
                        android:layout_height="60dp"/>
                    <RelativeLayout
                        android:id="@+id/my_homepage"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="途途IT学堂"
                            android:textSize="@dimen/sp_20"
                            android:textColor="@color/skin_text" />

                        <TextView
                            android:id="@+id/message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title"
                            android:layout_marginTop="4dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/my_welcome_text"
                            android:textColor="@color/skin_text"
                            android:textSize="@dimen/sp_12" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/message"
                            android:orientation="horizontal"
                            android:layout_marginTop="4dp"

                            android:gravity="center">
                            <ImageView
                                android:id="@+id/state"
                                android:layout_width="@dimen/dp_8"
                                android:layout_height="@dimen/dp_8"
                                android:src="@drawable/online" />
                            <TextView
                                android:id="@+id/facility"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp_3"
                                android:textSize="@dimen/sp_10"
                                android:textColor="@color/skin_text"
                                android:text="1111111"/>

                            <View
                                android:id="@+id/view"
                                android:layout_width="@dimen/dp_4"
                                android:layout_height="@dimen/dp_1"
                                android:background="@color/skin_text"
                                android:layout_marginLeft="@dimen/dp_3"/>
                            <TextView
                                android:id="@+id/communication_technology"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/skin_text"
                                android:layout_marginLeft="@dimen/dp_3"
                                android:textSize="@dimen/sp_10"
                                android:text="WiFi"/>

                        </LinearLayout>

                    </RelativeLayout>


                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieAnimationView"
                        android:layout_width="103dp"
                        android:layout_height="103dp"
                        android:layout_alignParentEnd="true"
                        app:lottie_repeatMode="restart" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:textColor="@color/skin_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"/>
                    <TextView
                        android:textColor="@color/skin_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_title_one"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:textColor="@color/skin_text"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30"/>
                    <TextView
                        android:textColor="@color/skin_text"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_title_two"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:textColor="@color/skin_text"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="60"/>
                    <TextView
                        android:textColor="@color/skin_text"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_title_three"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:textColor="@color/skin_text"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"/>
                    <TextView
                        android:textColor="@color/skin_text"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_title_four"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_collect"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_collect"/>
            <TextView
                android:id="@+id/collect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#404040"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:text="@string/my_collect_name"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/icon_left_arrow" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/l_skin"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/icon_skin"/>
            <TextView
                android:id="@+id/skin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#404040"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:text="@string/my_skin_name"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_left_arrow" />

        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:id="@+id/l_logout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="78dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center_vertical"-->
<!--            android:paddingLeft="30dp"-->
<!--            android:paddingRight="30dp">-->
<!--            <ImageView-->
<!--                android:layout_width="28dp"-->
<!--                android:layout_height="28dp"-->
<!--                android:src="@drawable/tuichudenglu"/>-->
<!--            <TextView-->
<!--                android:id="@+id/logout"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:textColor="#404040"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:text="退出登陆"/>-->

<!--            <ImageView-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="20dp"-->
<!--                android:src="@drawable/icon_left_arrow" />-->

<!--        </LinearLayout>-->
    </LinearLayout>
</androidx.core.widget.NestedScrollView>